fix(styles): Fix selectbox height on Firefox
[TP#4740](https://contentful.tpondemand.com/entity/4740)

--- a/src/stylesheets/modules/forms/select.styl
+++ b/src/stylesheets/modules/forms/select.styl
@@ -18,12 +18,13 @@ p
 Styleguide 5.2
 */
 
-$select-box-line-height = 2em
+$select-box-line-height = 2.3em
 .cfnext-select-box
+  box-sizing: border-box
   $button()
   $button-tertiary()
-  padding: 1px 1.6em 0 0.6em
-  line-height: $select-box-line-height
+  padding: 0 1.6em 1px 0.6em
+  height: $select-box-line-height
   color: inherit
   font-size: inherit
   font-family: inherit
